repaired too wide screen bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-/* body {
-  overflow-x: hidden;
-} */
+
 .coach-image {
   width: 30vh;
   height: 30vh;
@@ -201,7 +199,7 @@ body {
 .right {
   opacity: 0;
   filter: blur(5px);
-  transform: translateX(+50%);
+  right: -100%;
   transition: all 1s;
 }
 
@@ -276,4 +274,9 @@ body {
 
 #BackToTop:hover {
   background-color: #555;
+}
+@media (max-width: 600px) {
+  #BackToTop {
+    display: none !important;
+  }
 }
